# dlo

./: .gitignore  .markdownlint-cli2.yaml  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: action.yml
beamer/: main.tex
beamer/00-yolo/: main.tex
beamer/00-yolo/resources/: colors.tex  math.tex
beamer/00-yolo/resources/images/: conf-matrix-tikz.tex
beamer/01-optuna/: main.tex
beamer/01-optuna/resources/bib/: references.bib
beamer/resources/: config.tex  math.tex
beamer/resources/bib/: references.bib
beamer/resources/images/: conf-matrix-tikz.tex  pr-curve-tikz.tex
gh-pages/: index.html
tutorials/: MNIST_oldSchool_2025v2.ipynb  README.md  computer-vision-tutorial.ipynb  einfuehrung-python.ipynb  jupyter-notebook-tutorial.ipynb  optimizer.ipynb  yolo.py
uebungsblaetter/01/: uebungsblatt01.ipynb
