[project]
name = "dlo"
version = "0.1.0"
description = "Material for DLO course at TH Koeln"
readme = "README.md"
requires-python = ">=3.14"

dependencies = [
    "opencv-python>=4.13.0.92",
    "pre-commit>=4.5.1",
    "ruff>=0.15.8",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "ultralytics>=8.4.61",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", marker = "sys_platform == 'macos'" },
    { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cpu", marker = "sys_platform == 'macos'" },
    { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.ruff]
line-length = 88

[tool.ruff.format]
preview = true

[tool.ruff.lint]
preview = true
extend-select = ["B", "I", "Q"]
